Make resource origins URI